[metadata]
name = top.gg.py
version = attr: toppy.client.__version__
author = EEKIM10
author_email = eek@clicksminuteper.net
description = A new, modern API wrapper for the top.gg API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dragdev-studios/top.py
project_urls =
    Bug Tracker = https://github.com/dragdev-studios/top.py/issues
    Documentation = https://toppy.readthedocs.io/en/master
    Source = https://github.com/dragdev-studios/top.py
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = tests

[options.extras_require]
tests = pytest
docs =
    sphinx
    sphinx-rtd-dark-mode

[pycodestyle]
count = True
max-line-length = 130
max-doc-length = 160
statistics = True
exclude=venv
